# embers

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.local  LICENSE  README.md  conftest.py  platform.yaml  pyproject.toml
bench/: README.md  harness.py  protocol.py  run_once.py
bench/configs/: compile_cache.yaml  modal_target.yaml  naive_local.yaml  s3_tier.yaml  snapshot.yaml
deploy/: platform.local.yaml
deploy/helm/embers/: Chart.yaml  values.yaml
deploy/helm/embers/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
embers/: __init__.py  autoscaler.py  cli.py  controlplane.py  fingerprint.py  gateway.py  gpu_backend.py  loader.py  metrics.py  noderpc.py  platform.py  scheduler.py  server.py  starter.py  store.py  streaming.py
examples/: COMPARISON.md  README.md  cost_calculator.py  demo.py  demo_mock.yaml  demo_platform.yaml  multimodel.yaml  overcommit.yaml  overcommit_demo.py  pack_benchmark.py  warm_overhead.py  without_embers.py  your_app.py
scripts/: _async_park_test.sh  _async_stream_driver.sh  _async_stream_probe.py  _embers_stream_test.sh  _embers_up_test.sh  _park_diag.sh  _platform_demo.py  _probe_gpu.py  _probe_gpu_driver.sh  _rung2_driver.sh  _rung2_driver_multi.sh  _rung2_probe.py  _rung2_probe_multi.py  demo_runpod.sh  feasibility_step0.sh  remote.sh  setup.sh  test.sh
tests/: test_async_serving.py  test_autoscaler.py  test_autoscaler_async.py  test_autoscaler_concurrency.py  test_autoscaler_integration.py  test_autoscaler_multi_gpu.py  test_cli.py  test_controlplane.py  test_durable_state.py  test_eviction_policy.py  test_fingerprint.py  test_gateway.py  test_gateway_api.py  test_gateway_autoscaler.py  test_gateway_metrics.py  test_gpu_backend.py  test_harness.py  test_harness_integration.py  test_heartbeat.py  test_loader.py  test_lora.py  test_metrics.py  test_noderpc.py  test_overcommit.py  test_phase5_wiring.py  test_platform.py  test_platform_multinode.py  test_platform_remote.py  test_protocol.py  test_run_once.py  test_scheduler.py  test_scheduler_integration.py  test_server.py  test_server_api.py  test_soak.py  test_streaming.py  test_tenants.py  test_tensor_parallel.py  test_usage.py
